--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-icons": "^2.2.5",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.14"
   },
