--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-icons": "^2.2.5",
+    "react-loading": "^0.1.4",
+    "react-modal": "^2.2.2",
     "react-redux": "^5.0.6",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
